-- Version 2.4.2, released ...

 * Added support for new blocks in Minecraft 1.11

-- Version 2.4.1, released 5-2-2017

 * Bug fix: make Importing existing Minecraft maps work again

-- Version 2.4.0, released 4-2-2017

 * There are two new selection modification operations on the Global Operations tool screen: "add to selection" and "remove from selection" which together with the filter settings allows you to sculpt complex and intricate selections based on the contents of the world
 * It is now possible to hide the terrain type and the fluids (water and lava), or show *just* the terrain, hiding all layers. This is done with the new checkboxes on the Terrain panel. Deselecting "Show Terrain" will turn the surface entirely grey, hiding the terrain type and making layers easier to see. Selecting "Solo Terrain" will hide all layers. And deselecting "Show Water/Lava" will remove all water and lava from view, making it easier to see river, lake and ocean beds. Just as with the other "show" checkboxes: whenever the corresponding tool or paint is selected the layer *will* be shown, regardless of the checkbox setting. In other words: when you have the Flood or Lava tools selected the fluids will always be shown, and whenever you have any terrain type selected the terrain will always be shown
 * The four terrain shaping operations (Height, Flatten, Smooth and Raise Mountain) now have an option on the Tool Settings panel: "Apply theme". When enabled (which is the default only for Raise Mountain), applying the operation will also reset the terrain type to the theme (the default terrain settings), as well as apply or remove any layers contained in the theme (such as the Frost layer by default)