@@ -1,6 +1,7 @@
 -- Version 2.4.2, released ...
 
  * Added support for new blocks in Minecraft 1.11
+ * Entities from custom objects will now be assigned a random UUID each time they are placed by WorldPainter, making it once again possible to use (for instance) schematics to place mobs and other entities in the map. Previously Minecraft would remove all but one of such entities, since they all shared the same UUID
 
 -- Version 2.4.1, released 5-2-2017
 
